--- a/load_nvda_ohlc.ipynb
+++ b/load_nvda_ohlc.ipynb
@@ -693,110 +693,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Intraday Patterns Analysis\n",
-        "import matplotlib.pyplot as plt\n",
-        "import pandas as pd\n",
-        "\n",
-        "# Add hour and minute columns for intraday analysis\n",
-        "returns_with_time['hour'] = returns_with_time['datetime'].dt.hour\n",
-        "returns_with_time['minute'] = returns_with_time['datetime'].dt.minute\n",
-        "\n",
-        "# Calculate average returns and volatility by hour\n",
-        "hourly_stats = returns_with_time.groupby('hour')['returns'].agg(['mean', 'std', 'count'])\n",
-        "hourly_stats.columns = ['mean_return', 'volatility', 'count']\n",
-        "\n",
-        "# Convert to percentage for readability\n",
-        "hourly_stats['mean_return_pct'] = hourly_stats['mean_return'] * 100\n",
-        "hourly_stats['volatility_pct'] = hourly_stats['volatility'] * 100\n",
-        "\n",
-        "print(\"=== INTRADAY PATTERNS ANALYSIS ===\")\n",
-        "print(\"Average returns and volatility by hour of day:\")\n",
-        "print(hourly_stats)\n",
-        "\n",
-        "# Market open and close effects\n",
-        "print(f\"\\n=== MARKET OPEN/CLOSE EFFECTS ===\")\n",
-        "print(\"First 30 minutes (9:30-10:00 AM):\")\n",
-        "first_30min = returns_with_time[(returns_with_time['hour'] == 9) | \n",
-        "                               ((returns_with_time['hour'] == 10) & (returns_with_time['minute'] < 30))]\n",
-        "print(f\"  Mean return: {first_30min['returns'].mean()*100:.4f}%\")\n",
-        "print(f\"  Volatility: {first_30min['returns'].std()*100:.4f}%\")\n",
-        "print(f\"  Count: {len(first_30min):,}\")\n",
-        "\n",
-        "print(\"\\nLast 30 minutes (3:30-4:00 PM):\")\n",
-        "last_30min = returns_with_time[(returns_with_time['hour'] == 15) & (returns_with_time['minute'] >= 30) |\n",
-        "                              (returns_with_time['hour'] == 16)]\n",
-        "print(f\"  Mean return: {last_30min['returns'].mean()*100:.4f}%\")\n",
-        "print(f\"  Volatility: {last_30min['returns'].std()*100:.4f}%\")\n",
-        "print(f\"  Count: {len(last_30min):,}\")\n",
-        "\n",
-        "print(\"\\nMidday (11:00 AM - 2:00 PM):\")\n",
-        "midday = returns_with_time[(returns_with_time['hour'] >= 11) & (returns_with_time['hour'] < 14)]\n",
-        "print(f\"  Mean return: {midday['returns'].mean()*100:.4f}%\")\n",
-        "print(f\"  Volatility: {midday['returns'].std()*100:.4f}%\")\n",
-        "print(f\"  Count: {len(midday):,}\")\n",
-        "\n",
-        "# Plot intraday patterns\n",
-        "fig, axes = plt.subplots(2, 2, figsize=(15, 10))\n",
-        "\n",
-        "# Average returns by hour\n",
-        "axes[0, 0].bar(hourly_stats.index, hourly_stats['mean_return_pct'], alpha=0.7, color='blue')\n",
-        "axes[0, 0].set_title('Average Returns by Hour of Day')\n",
-        "axes[0, 0].set_xlabel('Hour')\n",
-        "axes[0, 0].set_ylabel('Average Return (%)')\n",
-        "axes[0, 0].axhline(y=0, color='black', linestyle='-', alpha=0.3)\n",
-        "axes[0, 0].grid(True, alpha=0.3)\n",
-        "\n",
-        "# Volatility by hour\n",
-        "axes[0, 1].bar(hourly_stats.index, hourly_stats['volatility_pct'], alpha=0.7, color='red')\n",
-        "axes[0, 1].set_title('Volatility by Hour of Day')\n",
-        "axes[0, 1].set_xlabel('Hour')\n",
-        "axes[0, 1].set_ylabel('Volatility (%)')\n",
-        "axes[0, 1].grid(True, alpha=0.3)\n",
-        "\n",
-        "# Trading activity by hour\n",
-        "axes[1, 0].bar(hourly_stats.index, hourly_stats['count'], alpha=0.7, color='green')\n",
-        "axes[1, 0].set_title('Trading Activity by Hour of Day')\n",
-        "axes[1, 0].set_xlabel('Hour')\n",
-        "axes[1, 0].set_ylabel('Number of Minutes')\n",
-        "axes[1, 0].grid(True, alpha=0.3)\n",
-        "\n",
-        "# Combined view: volatility vs returns\n",
-        "axes[1, 1].scatter(hourly_stats['mean_return_pct'], hourly_stats['volatility_pct'], \n",
-        "                  s=100, alpha=0.7, color='purple')\n",
-        "for hour, row in hourly_stats.iterrows():\n",
-        "    axes[1, 1].annotate(f'{hour}:00', (row['mean_return_pct'], row['volatility_pct']), \n",
-        "                       xytext=(5, 5), textcoords='offset points', fontsize=8)\n",
-        "axes[1, 1].set_title('Return vs Volatility by Hour')\n",
-        "axes[1, 1].set_xlabel('Mean Return (%)')\n",
-        "axes[1, 1].set_ylabel('Volatility (%)')\n",
-        "axes[1, 1].axvline(x=0, color='black', linestyle='-', alpha=0.3)\n",
-        "axes[1, 1].grid(True, alpha=0.3)\n",
-        "\n",
-        "plt.tight_layout()\n",
-        "plt.show()\n",
-        "\n",
-        "# Extended hours analysis\n",
-        "print(f\"\\n=== EXTENDED HOURS ANALYSIS ===\")\n",
-        "regular_hours = returns_with_time[(returns_with_time['hour'] >= 9) & (returns_with_time['hour'] < 16)]\n",
-        "extended_hours = returns_with_time[(returns_with_time['hour'] < 9) | (returns_with_time['hour'] >= 16)]\n",
-        "\n",
-        "print(\"Regular hours (9:00 AM - 4:00 PM):\")\n",
-        "print(f\"  Mean return: {regular_hours['returns'].mean()*100:.4f}%\")\n",
-        "print(f\"  Volatility: {regular_hours['returns'].std()*100:.4f}%\")\n",
-        "print(f\"  Count: {len(regular_hours):,}\")\n",
-        "\n",
-        "print(\"Extended hours (pre-market + after-hours):\")\n",
-        "print(f\"  Mean return: {extended_hours['returns'].mean()*100:.4f}%\")\n",
-        "print(f\"  Volatility: {extended_hours['returns'].std()*100:.4f}%\")\n",
-        "print(f\"  Count: {len(extended_hours):,}\")\n"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 19,
       "metadata": {},
       "outputs": [
@@ -965,14 +861,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Extreme outliers (>3 std devs):\n",
+            "Extreme outliers (>6 std devs):\n",
             "Positive outliers: 897 (0.104%)\n",
             "Negative outliers: 821 (0.095%)\n",
             "Total extreme outliers: 1718 (0.199%)\n"
@@ -1078,8 +974,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 5. Volatility Clustering Analysis"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
@@ -1299,103 +1202,10 @@
       ]
     },
     {
-      "cell_type": "raw",
-      "metadata": {
-        "vscode": {
-          "languageId": "raw"
-        }
-      },
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "# Intraday Patterns Analysis - Key Findings\n",
-        "\n",
-        "## 🕐 **Hourly Volatility Patterns**\n",
-        "\n",
-        "### **1. Market Open Volatility Spike**\n",
-        "- **Hour 9 (9:00-10:00 AM)**: **0.205%** volatility - **HIGHEST of the day**\n",
-        "- **Hour 8 (8:00-9:00 AM)**: **0.160%** volatility - second highest\n",
-        "- **Classic market open effect** - algorithms, news reactions, overnight gap fills\n",
-        "\n",
-        "### **2. Midday Calm (\"Lunch Lull\")**\n",
-        "- **Hours 11-13 (11 AM - 2 PM)**: **Lowest volatility** (~0.095-0.120%)\n",
-        "- **Hour 12 (noon)**: **0.100%** volatility - **quietest hour of the day**\n",
-        "- Institutional traders often step back during lunch\n",
-        "\n",
-        "### **3. Close Volatility Pickup**\n",
-        "- **Hour 16 (4:00 PM)**: **0.142%** volatility - elevated near close\n",
-        "- End-of-day positioning and settlement effects\n",
-        "- **50% higher** than midday levels\n",
-        "\n",
-        "### **4. Extended Hours Are Calmer**\n",
-        "- **Pre-market hours (4-8 AM)**: **0.082-0.110%** volatility\n",
-        "- **After-hours (17-19 PM)**: **0.047-0.074%** volatility\n",
-        "- **Significantly lower** than regular trading hours\n",
-        "\n",
-        "---\n",
-        "\n",
-        "## 📊 **Market Session Comparisons**\n",
-        "\n",
-        "### **Open vs Close Effects**\n",
-        "- **First 30 minutes (9:30-10:00 AM)**: \n",
-        "  - Volatility: **0.1976%**\n",
-        "  - Mean return: **0.0000%**\n",
-        "- **Last 30 minutes (3:30-4:00 PM)**:\n",
-        "  - Volatility: **0.1321%** \n",
-        "  - Mean return: **0.0004%**\n",
-        "- **Market open 50% MORE volatile** than market close\n",
-        "\n",
-        "### **Regular vs Extended Hours**\n",
-        "- **Regular hours** (9 AM-4 PM): \n",
-        "  - Volatility: **0.1332%**\n",
-        "  - Records: **461,467** (53.4%)\n",
-        "- **Extended hours** (pre-market + after-hours):\n",
-        "  - Volatility: **0.1045%** (**21% lower**)\n",
-        "  - Records: **403,208** (46.6%)\n",
-        "\n",
-        "---\n",
-        "\n",
-        "## 🎯 **Most Notable Findings**\n",
-        "\n",
-        "### **1. No Strong Directional Bias**\n",
-        "- **All hourly mean returns** are essentially **zero** (±0.001%)\n",
-        "- **No systematic intraday drift** - NVDA doesn't consistently trend up/down during specific hours\n",
-        "- **Remarkable**: Despite massive AI bull market, no intraday directional bias\n",
-        "\n",
-        "### **2. Classic U-Shaped Volatility Pattern**\n",
-        "- **High at market open** (0.205%)\n",
-        "- **Low at midday** (0.095-0.120%)  \n",
-        "- **Higher at market close** (0.142%)\n",
-        "- **Textbook intraday volatility signature**\n",
-        "\n",
-        "### **3. Extended Hours Dominance**\n",
-        "- **46.6% of all trading** happens outside regular hours\n",
-        "- **Lower volatility** but **massive participation**\n",
-        "- Shows importance of **institutional/algorithmic trading**\n",
-        "\n",
-        "### **4. Hour 9 = \"DANGER ZONE\"**\n",
-        "- **Highest volatility** of entire trading day\n",
-        "- **First hour of regular trading** contains maximum uncertainty\n",
-        "- **Critical period** for risk management\n",
-        "\n",
-        "---\n",
-        "\n",
-        "## 💡 **Trading & Risk Management Implications**\n",
-        "\n",
-        "### **Timing Strategies**\n",
-        "1. **Avoid trading NVDA in Hour 9** unless you can handle extreme volatility\n",
-        "2. **Midday (11 AM-2 PM)** offers **calmest conditions** for entry/exit\n",
-        "3. **Extended hours** provide **lower volatility** but potentially lower liquidity\n",
-        "\n",
-        "### **Risk Considerations**\n",
-        "- **No directional bias** means momentum strategies may struggle intraday\n",
-        "- **Position sizing** should adjust based on hour of day\n",
-        "- **Stop-loss levels** need wider bands during Hour 9\n",
-        "- **Options trading** should account for intraday volatility cycles\n",
-        "\n",
-        "### **Market Structure Insights**\n",
-        "- **Extended hours** represent nearly half of all activity\n",
-        "- **Institutional dominance** in after-hours trading\n",
-        "- **Retail participation** likely concentrated in regular hours\n",
-        "- **Algorithm-heavy** environment during extended sessions\n"
+        "## 6. Intraday Patterns Analysis"
       ]
     },
     {
@@ -1665,6 +1475,13 @@
         "- **Institutional dominance** in after-hours trading\n",
         "- **Retail participation** likely concentrated in regular hours\n",
         "- **Algorithm-heavy** environment during extended sessions\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 7. autocorrelation of returns and volume"
       ]
     },
     {
