--- a/solana/02_trader_analysis.ipynb
+++ b/solana/02_trader_analysis.ipynb
@@ -1083,6 +1083,28 @@
         "\n",
         "The data reveals meme coin trading as a highly predatory market where specialists with superior information/timing extract value from the broad retail base.\n"
       ]
+    },
+    {
+      "cell_type": "raw",
+      "metadata": {
+        "vscode": {
+          "languageId": "raw"
+        }
+      },
+      "source": [
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "raw",
+      "metadata": {
+        "vscode": {
+          "languageId": "raw"
+        }
+      },
+      "source": [
+        "\n"
+      ]
     }
   ],
   "metadata": {
