--- a/solana/04-2_statistical_validation.ipynb
+++ b/solana/04-2_statistical_validation.ipynb
@@ -4,7 +4,19 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Phase 3: Statistical Validation & Robust Analysis\n\n**Objective**: Validate signals with maximum statistical rigor using all available data to reveal true correlation strength.\n\n**Key Components**:\n- **Sample Size Optimization** - From 100 to 8,184 samples\n- **Multi-Coin Validation** - Pool all 10 coins for universal patterns\n- **Statistical Testing** - P-values, multiple correlation methods\n- **Reality Check** - Evolution from inflated to realistic correlations\n\n**Input from Phase 2**: Feature engineering functions and signal framework\n\n**Expected Outcome**: Statistically robust correlation analysis revealing true signal strength (0.05-0.11) suitable for production trading."
+        "# Phase 3: Statistical Validation & Robust Analysis\n",
+        "\n",
+        "**Objective**: Validate signals with maximum statistical rigor using all available data to reveal true correlation strength.\n",
+        "\n",
+        "**Key Components**:\n",
+        "- **Sample Size Optimization** - From 100 to 8,184 samples\n",
+        "- **Multi-Coin Validation** - Pool all 10 coins for universal patterns\n",
+        "- **Statistical Testing** - P-values, multiple correlation methods\n",
+        "- **Reality Check** - Evolution from inflated to realistic correlations\n",
+        "\n",
+        "**Input from Phase 2**: Feature engineering functions and signal framework\n",
+        "\n",
+        "**Expected Outcome**: Statistically robust correlation analysis revealing true signal strength (0.05-0.11) suitable for production trading."
       ]
     },
     {
