--- a/solana/batch578_sample_analysis/04-1_feature_engineering_signals.ipynb
+++ b/solana/batch578_sample_analysis/04-1_feature_engineering_signals.ipynb
@@ -4,7 +4,18 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Phase 2: Feature Engineering & Signal Development\n\n**Objective**: Build comprehensive feature engineering framework and develop initial trading signals using data-driven optimal time windows.\n\n**Key Components**:\n- **Comprehensive Feature Engineering** - 75+ features across 7 categories\n- **Signal Development Framework** - Link features to forward profitability\n- **Initial Validation** - Test signal strength with initial sample\n\n**Input from Phase 1**: Optimal time windows [30s, 60s, 120s, 300s, 600s]\n\n**Expected Outcome**: Feature engineering framework + initial signal validation showing promising correlations."
+        "# Phase 2: Feature Engineering & Signal Development\n",
+        "\n",
+        "**Objective**: Build comprehensive feature engineering framework and develop initial trading signals using data-driven optimal time windows.\n",
+        "\n",
+        "**Key Components**:\n",
+        "- **Comprehensive Feature Engineering** - 75+ features across 7 categories\n",
+        "- **Signal Development Framework** - Link features to forward profitability\n",
+        "- **Initial Validation** - Test signal strength with initial sample\n",
+        "\n",
+        "**Input from Phase 1**: Optimal time windows [30s, 60s, 120s, 300s, 600s]\n",
+        "\n",
+        "**Expected Outcome**: Feature engineering framework + initial signal validation showing promising correlations."
       ]
     },
     {
