--- a/solana/03_session_based_features.ipynb
+++ b/solana/03_session_based_features.ipynb
@@ -634,6 +634,175 @@
     "\n",
     "con.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating trader_coin_features table...\n",
+      "Table created successfully!\n",
+      "Total trader-coin feature records: 17,585,219\n",
+      "\n",
+      "Sample features:\n",
+      "                                      trader_id  \\\n",
+      "0  A1GJZn9QWnEryKo8DU847rjgvAfj7AmWgc9SzaFJkJ9x   \n",
+      "1  3gLQQ7faiVGdRoyeAAfk1q6dbs2DLGeTJF4QYuJXdz4z   \n",
+      "2  HaW2bpEwppksxqhfaPXjv5P95KazZ4HN3G5Vzd2K7gYW   \n",
+      "3  DkQFFRRstsx94P5sa3WSSU2wSPNgzWNUuQb93GKFMX2v   \n",
+      "4  6XAP1QSYXsgXeLi63BDcXRySA1nw7R7mgpgdVuWLiAG3   \n",
+      "\n",
+      "                                        coin_id  trade_count  trades_per_hour  \\\n",
+      "0  BDW8YHasD3NSDjSHU9Xy6KXtshGayMGQfj5bJpLcpump            2              1.0   \n",
+      "1  BDW8YHasD3NSDjSHU9Xy6KXtshGayMGQfj5bJpLcpump            1              0.5   \n",
+      "2  BDW8YHasD3NSDjSHU9Xy6KXtshGayMGQfj5bJpLcpump            7              3.5   \n",
+      "3  BDW8YHasD3NSDjSHU9Xy6KXtshGayMGQfj5bJpLcpump            4              2.0   \n",
+      "4  BDW8YHasD3NSDjSHU9Xy6KXtshGayMGQfj5bJpLcpump            6              3.0   \n",
+      "\n",
+      "   time_span_minutes  total_volume_traded  avg_trade_size  trade_size_cv  \\\n",
+      "0           1.883333          9267.602275     4633.801137       1.413908   \n",
+      "1           0.000000             0.198000        0.198000            NaN   \n",
+      "2          66.050000          6660.448857      951.492694       1.374355   \n",
+      "3          68.100000           185.985808       46.496452       1.154452   \n",
+      "4          91.416667          3579.160053      596.526675       1.128975   \n",
+      "\n",
+      "   largest_trade_size  volume_concentration  unique_trading_pairs  \\\n",
+      "0         9266.602275              0.999892                     2   \n",
+      "1            0.198000              1.000000                     1   \n",
+      "2         3066.194921              0.460359                     2   \n",
+      "3           92.982904              0.499946                     2   \n",
+      "4         1342.072520              0.374969                     2   \n",
+      "\n",
+      "   sol_involvement_ratio  buy_ratio  round_number_ratio  trade_size_diversity  \\\n",
+      "0                    1.0   0.500000                 0.5                   1.0   \n",
+      "1                    1.0   1.000000                 0.0                   1.0   \n",
+      "2                    1.0   0.571429                 0.0                   1.0   \n",
+      "3                    1.0   0.500000                 0.5                   0.5   \n",
+      "4                    1.0   0.500000                 0.5                   0.5   \n",
+      "\n",
+      "   avg_seconds_between_trades  first_trade_minutes  \n",
+      "0                       113.0            18.600000  \n",
+      "1                         0.0            18.883333  \n",
+      "2                       660.5            10.766667  \n",
+      "3                      1362.0            21.400000  \n",
+      "4                      1097.0             9.483333  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# OPTION 1: Single Comprehensive Query\n",
+    "# Combine all features into one query for efficiency\n",
+    "\n",
+    "all_features_query = \"\"\"\n",
+    "CREATE OR REPLACE TABLE trader_coin_first_two_hours_features AS       \n",
+    "WITH coin_start_times AS (\n",
+    "    SELECT \n",
+    "        mint,\n",
+    "        MIN(block_timestamp) as coin_launch_time\n",
+    "    FROM coin_first_two_hours\n",
+    "    GROUP BY mint\n",
+    "),\n",
+    "trader_features AS (\n",
+    "    SELECT \n",
+    "        t.swapper as trader_id,\n",
+    "        t.mint as coin_id,\n",
+    "        s.coin_launch_time,\n",
+    "        \n",
+    "        -- ACTIVITY FEATURES\n",
+    "        COUNT(*) as trade_count,\n",
+    "        COUNT(*) / 2.0 as trades_per_hour,\n",
+    "        EXTRACT(EPOCH FROM (MAX(t.block_timestamp) - MIN(t.block_timestamp))) / 60.0 as time_span_minutes,\n",
+    "        \n",
+    "        -- VOLUME FEATURES  \n",
+    "        SUM(swap_from_amount) as total_volume_traded,\n",
+    "        AVG(swap_from_amount) as avg_trade_size,\n",
+    "        STDDEV(swap_from_amount) as trade_size_std,\n",
+    "        MAX(swap_from_amount) as largest_trade_size,\n",
+    "        \n",
+    "        -- DIVERSIFICATION FEATURES\n",
+    "        COUNT(DISTINCT CONCAT(swap_from_mint, '|', swap_to_mint)) as unique_trading_pairs,\n",
+    "        SUM(CASE WHEN swap_from_mint = 'So11111111111111111111111111111111111111112' \n",
+    "                      OR swap_to_mint = 'So11111111111111111111111111111111111111112' THEN 1 ELSE 0 END) as sol_trades,\n",
+    "        SUM(CASE WHEN swap_to_mint = t.mint THEN 1 ELSE 0 END) as buy_trades,\n",
+    "        \n",
+    "        -- BEHAVIORAL FEATURES\n",
+    "        SUM(CASE WHEN swap_from_amount IN (-- Small round amounts\n",
+    "                0.01, 0.05, 0.1, 0.2, 0.25, 0.5, 0.75,\n",
+    "                -- Whole numbers 1-10\n",
+    "                1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0,\n",
+    "                -- Common trading amounts\n",
+    "                15.0, 20.0, 25.0, 50.0, 75.0, 100.0,\n",
+    "                -- Larger round amounts  \n",
+    "                150.0, 200.0, 250.0, 500.0, 750.0, 1000.0,\n",
+    "                -- Very large round amounts\n",
+    "                1500.0, 2000.0, 2500.0, 5000.0, 10000.0) THEN 1 ELSE 0 END) as round_number_trades,\n",
+    "        COUNT(DISTINCT swap_from_amount) as unique_trade_sizes,\n",
+    "        \n",
+    "        -- TIMING FEATURES\n",
+    "        MIN(EXTRACT(EPOCH FROM t.block_timestamp - s.coin_launch_time) / 60.0) as first_trade_minutes\n",
+    "        \n",
+    "    FROM coin_first_two_hours t\n",
+    "    JOIN coin_start_times s ON t.mint = s.mint\n",
+    "    GROUP BY t.swapper, t.mint, s.coin_launch_time\n",
+    ")\n",
+    "    SELECT \n",
+    "        trader_id,\n",
+    "        coin_id,\n",
+    "        \n",
+    "        -- Activity features\n",
+    "        trade_count,\n",
+    "        trades_per_hour,\n",
+    "        time_span_minutes,\n",
+    "        \n",
+    "        -- Volume features\n",
+    "        total_volume_traded,\n",
+    "        avg_trade_size,\n",
+    "        CASE WHEN avg_trade_size > 0 THEN trade_size_std / avg_trade_size ELSE 0 END as trade_size_cv,\n",
+    "        largest_trade_size,\n",
+    "        CASE WHEN total_volume_traded > 0 THEN largest_trade_size / total_volume_traded ELSE 0 END as volume_concentration,\n",
+    "        \n",
+    "        -- Diversification features\n",
+    "        unique_trading_pairs,\n",
+    "        CAST(sol_trades AS FLOAT) / trade_count as sol_involvement_ratio,\n",
+    "        CAST(buy_trades AS FLOAT) / trade_count as buy_ratio,\n",
+    "        \n",
+    "        -- Behavioral features\n",
+    "        CAST(round_number_trades AS FLOAT) / trade_count as round_number_ratio,\n",
+    "        CAST(unique_trade_sizes AS FLOAT) / trade_count as trade_size_diversity,\n",
+    "        CASE \n",
+    "            WHEN trade_count > 1 AND time_span_minutes > 0 \n",
+    "            THEN (time_span_minutes * 60) / (trade_count - 1)\n",
+    "            ELSE 0 \n",
+    "        END as avg_seconds_between_trades,\n",
+    "        \n",
+    "        -- Timing features\n",
+    "        first_trade_minutes\n",
+    "        \n",
+    "    FROM trader_features\n",
+    "\"\"\"\n",
+    "\n",
+    "import duckdb\n",
+    "con = duckdb.connect('/Volumes/Extreme SSD/DuckDB/solana.duckdb')\n",
+    "\n",
+    "print(\"Creating trader_coin_features table...\")\n",
+    "con.execute(all_features_query)\n",
+    "print(\"Table created successfully!\")\n",
+    "\n",
+    "     # Verify the table\n",
+    "count = con.execute('SELECT COUNT(*) as count FROM trader_coin_first_two_hours_features').fetchdf()\n",
+    "print(f'Total trader-coin feature records: {count.iloc[0][\"count\"]:,}')\n",
+    "\n",
+    "     # Show sample\n",
+    "sample = con.execute('SELECT * FROM trader_coin_first_two_hours_features LIMIT 5').fetchdf()\n",
+    "print(\"\\nSample features:\")\n",
+    "print(sample)\n",
+    "\n",
+    "con.close()\n"
+   ]
   }
  ],
  "metadata": {
